--- a/package.json
+++ b/package.json
@@ -40,5 +40,5 @@
     "eslint-plugin-vue": "^7.0.0-0",
     "vue-jest": "^5.0.0-0"
   },
-  "description": "Ionic Vue Template 06 inspired by Instagram"
+  "description": "Ionic Vue Template 07"
 }
